--- a/SpringAopStudy/SpringAopStudy/SpringAopStudy.csproj
+++ b/SpringAopStudy/SpringAopStudy/SpringAopStudy.csproj
@@ -61,13 +61,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Advices\CustomLoggingAdvice.cs" />
+    <Compile Include="Object\FuncItem.cs" />
     <Compile Include="Object\ObjectFactory.cs" />
+    <Compile Include="Object\PostServiceCommand.cs" />
+    <Compile Include="Object\Writer.cs" />
+    <Compile Include="Object\Reader.cs" />
     <Compile Include="Object\ServiceCommand.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueueRepository.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Config\log4net.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <SubType>Designer</SubType>
